insert new profile image, small edits

--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
 
     <section id='hero'>
       <div>
-        <img src='images/hero.JPG' alt='picture of Emma with head tilted to the side, looking at camera'>
+        <img src='images/github-profile.png' alt='an avatar that vaguely resembles Emma'>
       </div>
       <div class='hero-text'>
         <div>
           <h1>Emma Grey</h1>
-          <span>(she/they)</span>
+          <span>(she/her)</span>
         </div>
-        <h2>web developer, musician</h2>
+        <h2>web developer</h2>
         <div id='hero-colorblock'></div>
       </div>
     </section>
