--- a/index.html
+++ b/index.html
@@ -1,31 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Roboto&display=swap" rel="stylesheet">
   <link rel='stylesheet' href='style.css'>
   <title>Emma's Portfolio</title>
 </head>
-<body>
-  <header></header>
 
-  <nav></nav>
+<body>
+  <header>
+  </header>
+
+  <nav>
+    <ul>
+      <li><a href='#about'>about</a></li>
+      <li><a href='#portfolio'>portfolio</a></li>
+      <li><a href='#contact'>contact</a></li>
+    </ul>
+  </nav>
 
   <section id='hero'>
-    <h1>Emma Grey</h1>
-    <p>web developer</p>
+    <div id='hero-text'>
+      <h1>Emma Grey</h1>
+      <p>web developer</p>
+    </div>
+    <img src='images/github-profile.png' alt='cartoon avatar of Emma'>
   </section>
 
   <section id='about'></section>
 
   <section id='portfolio'></section>
-  
+
   <section id='social-media'></section>
-  
+
   <section id='contact'></section>
 
   <footer></footer>
 
 </body>
+
 </html>
