create navbar and hero (text only)

--- a/index.html
+++ b/index.html
@@ -7,29 +7,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&family=Roboto&display=swap" rel="stylesheet">
   <link rel='stylesheet' href='style.css'>
   <title>Emma's Portfolio</title>
 </head>
 
 <body>
   <header>
+    <nav id='#nav'>
+      <ul>
+        <li><a href='#about'>about</a></li>
+        <li><a href='#portfolio'>portfolio</a></li>
+        <li><a href='#contact'>contact</a></li>
+      </ul>
+    </nav>
+    <a class='options' href="#pop-up">accessibility options</a>
+    <div id='pop-up'>
+      <a href="#nav">save</a>
+    </div>
   </header>
 
-  <nav>
-    <ul>
-      <li><a href='#about'>about</a></li>
-      <li><a href='#portfolio'>portfolio</a></li>
-      <li><a href='#contact'>contact</a></li>
-    </ul>
-  </nav>
 
   <section id='hero'>
     <div id='hero-text'>
-      <h1>Emma Grey</h1>
+      <h1>EMMA GREY</h1>
       <p>web developer</p>
+      <p>musician</p>
     </div>
-    <img src='images/github-profile.png' alt='cartoon avatar of Emma'>
+    <!-- <img src='images/github-profile.png' alt='cartoon avatar of Emma'> -->
   </section>
 
   <section id='about'></section>
