Set color pallette

--- a/index.html
+++ b/index.html
@@ -25,25 +25,50 @@
     <div id='pop-up'>
       <a href="#nav">save</a>
     </div>
+    <div class='dark-bkgd'></div>
   </header>
 
+  <main>
 
-  <section id='hero'>
-    <div id='hero-text'>
-      <h1>EMMA GREY</h1>
-      <p>web developer</p>
-      <p>musician</p>
-    </div>
-    <!-- <img src='images/github-profile.png' alt='cartoon avatar of Emma'> -->
-  </section>
+    <section id='hero'>
+      <div class='text-container'>
+        <div id='hero-text'>
+          <h1>EMMA GREY</h1>
+          <p>web developer</p>
+          <p>musician</p>
+        </div>
+      </div>
+    </section>
 
-  <section id='about'></section>
 
-  <section id='portfolio'></section>
+    <section id='about'>
+      <div class='title-container'>
+        <h2>about</h2>
+      </div>
+      <div class='about-paragraphs'>
+        <p>Hey there! My name is Emma, and I use she/her pronouns.</p>
+        <p>I am a beginner web developer based in New Jersey. My goal is to build simple, fun, and accessible websites
+          for
+          everyone.</p>
+        <p>Before I built websites, I completed a Bachelor of Music degree in clarinet performance at Ithaca College
+          with
+          a minor in Math and Jazz Studies. Unfortunately, a career in music isn't plausible for me anymore, so I delved
+          into web development. My interest in coding began when I took an Intro to Computer Science class while working
+          on my music degree. Now I am pursuing an Associate of Applied Science degree in Interface Design and Web
+          Development from Raritan Valley Community College.</p>
+      </div>
+    </section>
 
-  <section id='social-media'></section>
+    <section id='portfolio'>
+      <div class='title-container'>
+        <h2>portfolio</h2>
+      </div>
+    </section>
 
-  <section id='contact'></section>
+    <section id='social-media'></section>
+
+    <section id='contact'></section>
+  </main>
 
   <footer></footer>
 
