--- a/index.html
+++ b/index.html
@@ -63,6 +63,159 @@
       <div class='title-container'>
         <h2>portfolio</h2>
       </div>
+
+      <div id='projects-container'>
+
+        <div class='item HTML google'>
+          <div class='project-title'>
+            <h3>Google Homepage</h3>
+          </div>
+          <div class='project-display-container'>
+            <div class='project-image'>
+              <img src='images/google-homepage.png' alt='google homepage project'>
+            </div>
+            <div class='project-links google'>
+              <a href='http://github.com/emgrey02/google-homepage' target='_blank'>code</a>
+              <a href='http://emgrey02.github.io/google-homepage' target='_blank'>live preview</a>
+            </div>
+          </div>
+        </div>
+
+        <div class='item Javascript rock'>
+          <div class='project-title'>
+            <h3>Rock, Paper, Scissors</h3>
+          </div>
+          <div class='project-display-container'>
+            <div class='project-image'>
+              <img src='images/rock-paper-scissors.png' alt='rock, paper, scissors project preview'>
+            </div>
+            <div class='project-links rock'>
+              <a href='http://github.com/emgrey02/rock_paper_scissors' target='_blank'>code</a>
+              <a href='http://emgrey02.github.io/rock_paper_scissors' target='_blank'>live preview</a>
+            </div>
+          </div>
+        </div>
+
+        <div class='item Javascript etch'>
+          <div class='project-title'>
+            <h3>Etch-A-Sketch</h3>
+          </div>
+          <div class='project-display-container'>
+            <div class='project-image'>
+              <img src='images/etch-a-sketch.png' alt='etch-a-sketch project preview'>
+            </div>
+            <div class='project-links etch'>
+              <a href='http://github.com/emgrey02/etch-a-sketch' target='_blank'>code</a>
+              <a href='http://emgrey02.github.io/etch-a-sketch' target='_blank'>live preview</a>
+            </div>
+          </div>
+        </div>
+
+        <div class='item Javascript calc'>
+          <div class='project-title'>
+            <h3>Calculator</h3>
+          </div>
+          <div class='project-display-container'>
+            <div class='project-image'>
+              <img src='images/calculator.png' alt='calculator project preview'>
+            </div>
+            <div class='project-links calc'>
+              <a href='http://github.com/emgrey02/calculator' target='_blank'>code</a>
+              <a href='http://emgrey02.github.io/calculator' target='_blank'>live preview</a>
+            </div>
+          </div>
+        </div>
+
+        <div class='item HTML tech'>
+          <div class='project-title'>
+            <h3>Technical Documentation Page</h3>
+          </div>
+          <div class='project-display-container'>
+            <div class='project-image'>
+              <img src='images/documentation.png' alt='technical documentation page preview'>
+            </div>
+            <div class='project-links tech'>
+              <a href='http://github.com/emgrey02/technical-documentation' target='_blank'>code</a>
+              <a href='http://emgrey02.github.io/technical-documentation' target='_blank'>live preview</a>
+            </div>
+          </div>
+        </div>
+
+        <div class='item HTML product'>
+          <div class='project-title'>
+            <h3>Product Landing Page</h3>
+          </div>
+          <div class='project-display-container'>
+            <div class='project-image'>
+              <img src='images/product.png' alt='product landing page preview'>
+            </div>
+            <div class='project-links product'>
+              <a href='http://github.com/emgrey02/product-landing-page' target='_blank'>code</a>
+              <a href='http://emgrey02.github.io/product-landing-page' target='_blank'>live preview</a>
+            </div>
+          </div>
+        </div>
+
+        <div class='item HTML survey'>
+          <div class='project-title'>
+            <h3>Survey</h3>
+          </div>
+          <div class='project-display-container'>
+            <div class='project-image'>
+              <img src='images/survey.png' alt='survey project preview'>
+            </div>
+            <div class='project-links survey'>
+              <a href='http://github.com/emgrey02/survey-page' target='_blank'>code</a>
+              <a href='http://emgrey02.github.io/survey-page' target='_blank'>live preview</a>
+            </div>
+          </div>
+        </div>
+
+        <div class='item HTML tribute'>
+          <div class='project-title'>
+            <h3>Tribute Page</h3>
+          </div>
+          <div class='project-display-container'>
+            <div class='project-image'>
+              <img src='images/tribute-page.png' alt='tribute page preview'>
+            </div>
+            <div class='project-links tribute'>
+              <a href='http://github.com/emgrey02/tribute-page' target='_blank'>code</a>
+              <a href='http://emgrey02.github.io/tribute-page' target='_blank'>live preview</a>
+            </div>
+          </div>
+        </div>
+
+        <div class='item Javascript library'>
+          <div class='project-title'>
+            <h3>Library App</h3>
+          </div>
+          <div class='project-display-container'>
+            <div class='project-image'>
+              <img src='images/library.png' alt='library app preview'>
+            </div>
+            <div class='project-links library'>
+              <a href='http://github.com/emgrey02/library-app' target='_blank'>code</a>
+              <a href='http://emgrey02.github.io/library-app' target='_blank'>live preview</a>
+            </div>
+          </div>
+        </div>
+
+        <div class='item Javascript tic'>
+          <div class='project-title'>
+            <h3>Tic Tac Toe</h3>
+          </div>
+          <div class='project-display-container'>
+            <div class='project-image'>
+              <img src='images/tic-tac-toe.png' alt='tic tac toe project preview'>
+            </div>
+            <div class='project-links tic'>
+              <a href='http://github.com/emgrey02/tic-tac-toe' target='_blank'>code</a>
+              <a href='http://emgrey02.github.io/tic-tac-toe' target='_blank'>live preview</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section id='social-media'></section>
