--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <title>Emma's Portfolio</title>
 </head>
 
-<body>
+<body id='body'>
   <header>
-    <nav id='#nav'>
+    <nav>
       <ul>
         <li><a href='#about'>about</a></li>
         <li><a href='#portfolio'>portfolio</a></li>
@@ -23,7 +23,7 @@
     </nav>
     <a class='options' href="#pop-up">accessibility options</a>
     <div id='pop-up'>
-      <a href="#nav">save</a>
+      <a href="#body">save</a>
     </div>
     <div class='dark-bkgd'></div>
   </header>
