--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
     <section class="about" id="about">
         <h2 class="about__title">About Me</h2>
         <img src="assets/my-face.png" alt="Emma's face staring off to the right" class="about__image">
-        <div class="moving-lines__line"></div>
+        <div class="moving-lines__line about__line"></div>
         <h3 class="about__tidbit">Musician, Web Developer</h3>
         <div class="about__container">
             <p class="about__container--para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis iste maxime cumque ad quidem ab rerum illum debitis laborum veniam voluptatum, voluptates nesciunt et iusto similique, omnis voluptate, nihil perspiciatis.</p>
