Use some sass magic

--- a/src/index.html
+++ b/src/index.html
@@ -74,31 +74,32 @@
 
         <section class="projects" id="projects">
             <h2 class="projects__title">Projects</h2>
-            <div class="project">
+
+            <div class="project right">
                 <div class="project__image-cont">
-                    <span class="project__image-cont--platter right"></span>
+                    <span class="project__image-cont--platter "></span>
                     <img class="project__image-cont--image" src="assets/statalog.svg" alt="screenshot of Statalog fitbit clock">
                 </div>
-                <div class="project__words-cont right">
+                <div class="project__words-cont">
                     <h3 class="project__words-cont--title">Statalog</h3>
                     <p class="project__words-cont--environment">Fitbit Versa 3 Clock</p>
                     <p class="project__words-cont--description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit veritatis culpa, obcaecati consequatur optio, iusto, repellat nam quas natus tempore quia placeat dolorem. Minima doloribus vitae similique praesentium laborum quidem.</p>
-                    <a class="project__words-cont--link">Fitbit App Gallery</a>
-                    <a class="project__words-cont--link">Code</a>
+                    <a class="project__words-cont--first-link">Fitbit App Gallery</a>
+                    <a class="project__words-cont--second-link">Code</a>
                 </div>
             </div>
 
-            <div class="project">
+            <div class="project left">
                 <div class="project__image-cont">
-                    <span class="project__image-cont--platter left"></span>
+                    <span class="project__image-cont--platter"></span>
                     <img class="project__image-cont--image" src="assets/statalog.svg" alt="screenshot of Statalog fitbit clock">
                 </div>
-                <div class="project__words-cont left">
+                <div class="project__words-cont">
                     <h3 class="project__words-cont--title">Statalog</h3>
                     <p class="project__words-cont--environment">Fitbit Versa 3 Clock</p>
                     <p class="project__words-cont--description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit veritatis culpa, obcaecati consequatur optio, iusto, repellat nam quas natus tempore quia placeat dolorem. Minima doloribus vitae similique praesentium laborum quidem.</p>
-                    <a class="project__words-cont--link">Fitbit App Gallery</a>
-                    <a class="project__words-cont--link">Code</a>
+                    <a class="project__words-cont--first-link">Fitbit App Gallery</a>
+                    <a class="project__words-cont--second-link">Code</a>
                 </div>
             </div>
         </section>
