Add animation to projects

--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
             </div>
         </section>
 
-        <section class="projects" id="projects">
+        <section class="projects in-view" id="projects">
             <h2 class="projects__title">Projects</h2>
 
             <div class="project right">
