Make project animation accessible

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="scss/main.scss">
     <script src="script/index.js" defer></script>
 </head>
-<>
 
     <header>
         <nav class="nav">
@@ -82,10 +81,10 @@
                 </div>
                 <div class="project__words-cont">
                     <h3 class="project__words-cont--title">Statalog</h3>
-                    <p class="project__words-cont--environment">Fitbit Versa 3 Clock</p>
+                    <p class="project__words-cont--environment">Fitbit Sense/Versa 3 Clock</p>
                     <p class="project__words-cont--description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit veritatis culpa, obcaecati consequatur optio, iusto, repellat nam quas natus tempore quia placeat dolorem. Minima doloribus vitae similique praesentium laborum quidem.</p>
-                    <a class="project__words-cont--first-link">Fitbit App Gallery</a>
-                    <a class="project__words-cont--second-link">Code</a>
+                    <a href="https://gallery.fitbit.com/details/58e742e9-d043-4ee1-a8be-479c1e1c6db7" class="project__words-cont--first-link">Fitbit App Gallery</a>
+                    <a href="https://github.com/emgrey02/statalog"  class="project__words-cont--second-link">Code</a>
                 </div>
             </div>
 
@@ -98,7 +97,7 @@
                     <h3 class="project__words-cont--title">Statalog</h3>
                     <p class="project__words-cont--environment">Fitbit Versa 3 Clock</p>
                     <p class="project__words-cont--description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit veritatis culpa, obcaecati consequatur optio, iusto, repellat nam quas natus tempore quia placeat dolorem. Minima doloribus vitae similique praesentium laborum quidem.</p>
-                    <a class="project__words-cont--first-link">Fitbit App Gallery</a>
+                    <a href="" class="project__words-cont--first-link">Fitbit App Gallery</a>
                     <a class="project__words-cont--second-link">Code</a>
                 </div>
             </div>
