Fix instersection observer animation

--- a/src/index.html
+++ b/src/index.html
@@ -71,10 +71,10 @@
             </div>
         </section>
 
-        <section class="projects in-view" id="projects">
+        <section class="projects" id="projects">
             <h2 class="projects__title">Projects</h2>
 
-            <div class="project right">
+            <div class="project right first in-view">
                 <div class="project__image-cont">
                     <span class="project__image-cont--platter "></span>
                     <img class="project__image-cont--image" src="assets/statalog.svg" alt="screenshot of Statalog fitbit clock">
@@ -88,7 +88,7 @@
                 </div>
             </div>
 
-            <div class="project left">
+            <div class="project left second in-view">
                 <div class="project__image-cont">
                     <span class="project__image-cont--platter"></span>
                     <img class="project__image-cont--image" src="assets/statalog.svg" alt="screenshot of Statalog fitbit clock">
