Get rid of parcel

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 
   <link rel="shortcut icon" href="assets/iconsquid.png" type="image/x-icon">
 
-  <link rel="stylesheet" href="scss/main.scss">
+  <link rel="stylesheet" href="scss/main.css">
   <script src="script/index.js" defer></script>
 </head>
 
