Alright maybe this is it

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
   <link rel="shortcut icon" href="assets/iconsquid.png" type="image/x-icon">
 
-  <link rel="stylesheet" href="scss/main.css">
-  <script src="script/index.js" defer></script>
+  <link rel="stylesheet" href="css/main.css">
+  <script src="src/script/index.js" defer></script>
 </head>
 
 <header>
