--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
   <section class="about" id="about">
     <h2 class="about__title">About Me</h2>
-    <img src="assets/my-face.png" alt="Emma's face staring off to the right" class="about__image">
+    <img src="src/assets/my-face.png" alt="Emma's face staring off to the right" class="about__image">
     <div class="moving-lines__line about__line"></div>
     <h3 class="about__tidbit">Musician, Web Developer</h3>
     <div class="about__container">
