--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Emma's Portfolio</title>
 
-  <link rel="shortcut icon" href="assets/iconsquid.png" type="image/x-icon">
+  <link rel="shortcut icon" href="src/assets/iconsquid.png" type="image/x-icon">
 
   <link rel="stylesheet" href="css/main.css">
   <script src="src/script/index.js" defer></script>
@@ -88,7 +88,7 @@
     <div class="project right first in-view">
       <div class="project__image-cont">
         <span class="project__image-cont--platter "></span>
-        <img class="project__image-cont--image" src="assets/statalog.svg" alt="screenshot of Statalog fitbit clock">
+        <img class="project__image-cont--image" src="src/assets/statalog.svg" alt="screenshot of Statalog fitbit clock">
       </div>
       <div class="project__words-cont">
         <h3 class="project__words-cont--title">Statalog</h3>
@@ -105,7 +105,7 @@
     <div class="project left second in-view">
       <div class="project__image-cont">
         <span class="project__image-cont--platter"></span>
-        <img class="project__image-cont--image" src="assets/statalog.svg" alt="screenshot of Statalog fitbit clock">
+        <img class="project__image-cont--image" src="src/assets/statalog.svg" alt="screenshot of Statalog fitbit clock">
       </div>
       <div class="project__words-cont">
         <h3 class="project__words-cont--title">Statalog</h3>
