Start editing content

--- a/index.html
+++ b/index.html
@@ -44,38 +44,13 @@
 </header>
 
 <main>
-
-  <svg class="big-arrow" width="236" height="300" viewBox="0 0 236 300" fill="none" xmlns="http://www.w3.org/2000/svg">
-    <g filter="url(#filter0_d_14_185)">
-      <path class="big-arrow__path"
-        d="M24 13.552C75.4615 -3.84616 179.444 25.833 149.769 151.33C141.418 186.643 136.344 226.935 136.344 268M70.8912 221.87C70.8912 221.87 90.3039 235.061 101.341 245.185L111.623 255.268L123.261 263.319L134.739 271.051C134.739 271.051 139.839 278.995 142.949 274.797C144.541 272.648 149.804 269.178 149.804 269.178L160.286 259.134L183.522 240.681L196.036 229.083L207.833 221.192C210.674 219.126 217.956 215.732 217.956 215.732L226.565 212.543"
-        stroke="#FFC785" stroke-width="18" stroke-linecap="round" />
-    </g>
-    <defs>
-      <filter id="filter0_d_14_185" x="0.997559" y="0.00198364" width="234.57" height="299.019"
-        filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-        <feFlood flood-opacity="0" result="BackgroundImageFix" />
-        <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
-          result="hardAlpha" />
-        <feOffset dx="-10" dy="10" />
-        <feGaussianBlur stdDeviation="2" />
-        <feComposite in2="hardAlpha" operator="out" />
-        <feColorMatrix type="matrix" values="0 0 0 0 0.764706 0 0 0 0 0.776471 0 0 0 0 0.835294 0 0 0 1 0" />
-        <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_14_185" />
-        <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_14_185" result="shape" />
-      </filter>
-    </defs>
-  </svg>
-
   <section class="about" id="about">
     <h2 class="about__title">About Me</h2>
     <img src="src/assets/emma.svg" alt="Emma's face staring off to the right" class="about__image">
     <div class="moving-lines__line about__line"></div>
     <h3 class="about__tidbit">Musician, Web Developer</h3>
     <div class="about__container">
-      <p class="about__container--para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis iste
-        maxime cumque ad quidem ab rerum illum debitis laborum veniam voluptatum, voluptates nesciunt et iusto
-        similique, omnis voluptate, nihil perspiciatis.</p>
+      <p class="about__container--para">Hey there! My name is Emma. </p>
       <p class="about__container--para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe dolor
         consequuntur nobis, modi tenetur ipsum dicta doloribus tempora deleniti rerum architecto omnis ratione veniam,
         facilis nostrum. Error nihil magnam commodi.</p>
@@ -93,9 +68,9 @@
       <div class="project__words-cont">
         <h3 class="project__words-cont--title">Statalog</h3>
         <p class="project__words-cont--environment">Fitbit Sense/Versa 3 Clock</p>
-        <p class="project__words-cont--description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit
-          veritatis culpa, obcaecati consequatur optio, iusto, repellat nam quas natus tempore quia placeat dolorem.
-          Minima doloribus vitae similique praesentium laborum quidem.</p>
+        <p class="project__words-cont--description">An Analog clock I made for the Fitbit Sense and Fitbit Versa 3
+          smartwatches. I build it with CSS, SVG, and JavaScript using Fitbit Studio, an online development environment,
+          and the Fitbit OS Simulator. </p>
         <a href="https://gallery.fitbit.com/details/58e742e9-d043-4ee1-a8be-479c1e1c6db7"
           class="project__words-cont--first-link">Fitbit App Gallery</a>
         <a href="https://github.com/emgrey02/statalog" class="project__words-cont--second-link">Code</a>
@@ -105,16 +80,20 @@
     <div class="project left second in-view">
       <div class="project__image-cont">
         <span class="project__image-cont--platter"></span>
-        <img class="project__image-cont--image" src="src/assets/statalog.svg" alt="screenshot of Statalog fitbit clock">
+        <img class="project__image-cont--image" src="src/assets/style-stage-screenshot.png"
+          alt="screenshot of Emma's Style Stage submission">
       </div>
       <div class="project__words-cont">
-        <h3 class="project__words-cont--title">Statalog</h3>
-        <p class="project__words-cont--environment">Fitbit Versa 3 Clock</p>
-        <p class="project__words-cont--description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit
-          veritatis culpa, obcaecati consequatur optio, iusto, repellat nam quas natus tempore quia placeat dolorem.
-          Minima doloribus vitae similique praesentium laborum quidem.</p>
-        <a href="" class="project__words-cont--first-link">Fitbit App Gallery</a>
-        <a class="project__words-cont--second-link">Code</a>
+        <h3 class="project__words-cont--title">Style Stage Submission</h3>
+        <p class="project__words-cont--environment">Website</p>
+        <p class="project__words-cont--description"> I submitted a style sheet to Stephanie Eckle's <a
+            href="https://stylestage.dev/">Style Stage</a> which
+          is an opportunity for anyone to re-style an unmodifiable HTML page. I used <a
+            href="https://sass-lang.com/">Sass</a> and compiled it into a single CSS file with <a
+            href="https://parcel.com">Parcel</a>. Anyone can contribute and submit a Pull Request to the <a
+            href="https://github.com/5t3ph/stylestage">github repository</a> as long as they follow the guidelines! </p>
+        <a href="https://style-stage.netlify.app" class="project__words-cont--first-link">Live Site</a>
+        <a href="https://github.com/emgrey02/style-stage-emgrey02" class="project__words-cont--second-link">Code</a>
       </div>
     </div>
   </section>
