--- a/index.html
+++ b/index.html
@@ -98,6 +98,24 @@
     </div>
   </section>
 
+  <section class="contact" id="contact">
+    <h2 class="contact__title">Contact</h2>
+    <form class="contact__form" name="simple-contact-form" accept-charset="utf-8"
+      action="https://formspree.io/f/xyyolzza" method="post">
+      <fieldset>
+        <label for="full-name">Full Name</label>
+        <input type="text" name="name" id="full-name" placeholder="First and Last" required>
+        <label for="email-address">Email Address</label>
+        <input type="email" name="_replyto" id="email-address" placeholder="email@domain.tld" required>
+        <label for="message">Message</label>
+        <textarea rows="5" name="message" id="message" placeholder="Type your message to Emma here!"
+          required></textarea>
+        <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
+      </fieldset>
+      <input type="submit" value="Submit">
+    </form>
+  </section>
+
   </body>
 
   <svg width="290" height="255" fill="none" xmlns="http://www.w3.org/2000/svg">
