--- a/index.html
+++ b/index.html
@@ -48,12 +48,19 @@
     <h2 class="about__title">About Me</h2>
     <img src="src/assets/emma.svg" alt="Emma's face staring off to the right" class="about__image">
     <div class="moving-lines__line about__line"></div>
-    <h3 class="about__tidbit">Musician, Web Developer</h3>
     <div class="about__container">
-      <p class="about__container--para">Hey there! My name is Emma. </p>
-      <p class="about__container--para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe dolor
-        consequuntur nobis, modi tenetur ipsum dicta doloribus tempora deleniti rerum architecto omnis ratione veniam,
-        facilis nostrum. Error nihil magnam commodi.</p>
+      <h3 class="about__container--tidbit">Musician, Web Developer</h3>
+      <p class="about__container--para">Hey there! My name is Emma. After completing a bachelor's degree in clarinet
+        performance, I'm transitioning into a career in web development. I'm currently working on an Associate's degree
+        in Interface Design and Web Development and looking for experience so that I can land an entry-level web
+        developer position. </p>
+      <p class="about__container--para">In my web creations I focus on accessibility and usability. I don't see a reason
+        in creating a website if not everyone is able to use it. I am also enjoying web design as I get more comfortable
+        using Figma, and I'm starting to make my own vector images (like the one I made of myself!). Right now I have
+        the most experience using HTML, CSS, and JavaScript without any frameworks at the moment. I enjoy using Sass for
+        my CSS, however. In the future I want to continue contributing to open-source projects and begin to work on
+        larger projects with others.
+      </p>
     </div>
   </section>
 
@@ -118,7 +125,7 @@
 
   </body>
 
-  <svg width="290" height="255" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <svg width="0" height="0" fill="none" xmlns="http://www.w3.org/2000/svg">
     <symbol id="icon" viewBox="0 0 290 255">
       <path
         d="M9.55544 194.87C-37.3 50.8318 98.061 -13.1628 200.45 2.24066C396.55 31.7424 219.776 311.141 141.446 194.87C30.3805 30.007 73.2851 390.781 9.55544 194.87Z"
