Update Style Stage link

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             href="https://sass-lang.com/">Sass</a> and compiled it into a single CSS file with <a
             href="https://parcel.com">Parcel</a>. Anyone can contribute and submit a Pull Request to the <a
             href="https://github.com/5t3ph/stylestage">github repository</a> as long as they follow the guidelines! </p>
-        <a href="https://style-stage.netlify.app" class="project__words-cont--first-link">Live Site</a>
+        <a href="https://stylestage.dev/styles/drawing-board/" class="project__words-cont--first-link">Live Site</a>
         <a href="https://github.com/emgrey02/style-stage-emgrey02" class="project__words-cont--second-link">Code</a>
       </div>
     </div>
