--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
     <div class="moving-lines__line about__line"></div>
     <div class="about__container">
       <h3 class="about__container--tidbit">Musician, Web Developer</h3>
-      <p class="about__container--para">Hey there! My name is Emma. After completing a bachelor's degree in clarinet
-        performance, I'm transitioning into a career in web development. I'm currently working on an Associate's degree
+      <p class="about__container--para">Hey there! My name is Emma. After completing a bachelor's degree in Clarinet
+        Performance, I'm transitioning into a career in Web Development. I'm currently working on an Associate's degree
         in Interface Design and Web Development and looking for experience so that I can land an entry-level web
         developer position. </p>
       <p class="about__container--para">In my web creations I focus on accessibility and usability. I don't see a reason
         in creating a website if not everyone is able to use it. I am also enjoying web design as I get more comfortable
         using Figma, and I'm starting to make my own vector images (like the one I made of myself!). Right now I have
-        the most experience using HTML, CSS, and JavaScript without any frameworks at the moment. I enjoy using Sass for
-        my CSS, however. In the future I want to continue contributing to open-source projects and begin to work on
-        larger projects with others.
+        the most experience using HTML, CSS, and JavaScript without any frameworks at the moment, although I've dabbled
+        in Svelte and React. I enjoy using Sass for my CSS, however. In the future I want to continue contributing to
+        open-source projects and begin to work on larger projects with others.
       </p>
     </div>
   </section>
