Update about me

--- a/index.html
+++ b/index.html
@@ -54,12 +54,13 @@
         Performance, I'm transitioning into a career in Web Development. I'm currently working on an Associate's degree
         in Interface Design and Web Development and looking for experience so that I can land an entry-level web
         developer position. </p>
-      <p class="about__container--para">In my web creations I focus on accessibility and usability. I don't see a reason
-        in creating a website if not everyone is able to use it. I am also enjoying web design as I get more comfortable
-        using Figma, and I'm starting to make my own vector images (like the one I made of myself!). Right now I have
-        the most experience using HTML, CSS, and JavaScript without any frameworks at the moment, although I've dabbled
-        in Svelte and React. I enjoy using Sass for my CSS, however. In the future I want to continue contributing to
-        open-source projects and begin to work on larger projects with others.
+      <p class="about__container--para">I focus on accessibility and usability in my web creations. I don't want to bar
+        anyone from using a website of mine. While working hard developing, I'm beginning to also enjoy web
+        design as I get more comfortable
+        using Figma. I'm even starting to make my own vector images. Right
+        now I have the most experience using HTML, CSS, and JavaScript without any frameworks at the moment, although I
+        have dabbled in Svelte and React. As I continue coding and learning, I want tokeep contributing to
+        open-source projects and start to work on larger projects with others.
       </p>
     </div>
   </section>
@@ -111,12 +112,11 @@
       action="https://formspree.io/f/xyyolzza" method="post">
       <fieldset>
         <label for="full-name">Full Name</label>
-        <input type="text" name="name" id="full-name" placeholder="First and Last" required>
+        <input type="text" name="name" id="full-name" required>
         <label for="email-address">Email Address</label>
-        <input type="email" name="_replyto" id="email-address" placeholder="email@domain.tld" required>
+        <input type="email" name="_replyto" id="email-address" required>
         <label for="message">Message</label>
-        <textarea rows="5" name="message" id="message" placeholder="Type your message to Emma here!"
-          required></textarea>
+        <textarea rows="5" name="message" id="message" required></textarea>
         <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
       </fieldset>
       <input type="submit" value="Submit">
@@ -138,6 +138,12 @@
       <path d="M40.5418 129.884C46.7983 121.876 53.305 102.856 73.5758 129.884H40.5418Z" fill="#FFAF51" />
     </symbol>
   </svg>
+
+  <footer class="footer">
+    <div class="footer__container">
+
+    </div>
+  </footer>
 </main>
 
 </html>
