--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
 
 <header>
   <nav class="nav">
-    <svg class="nav__icon">
-      <use href="#icon"></use>
-    </svg>
-    <h1 class="nav__name">Emma Grey</h1>
+    <div class="nav__container">
+      <svg class="nav__icon">
+        <use href="#icon"></use>
+      </svg>
+      <h1 class="nav__name">Emma Grey</h1>
+    </div>
     <ul class="nav__menu">
       <li class="nav__item">
         <a class="nav__link" href="#about">About</a>
@@ -77,7 +79,7 @@
         <h3 class="project__words-cont--title">Statalog</h3>
         <p class="project__words-cont--environment">Fitbit Sense/Versa 3 Clock</p>
         <p class="project__words-cont--description">An Analog clock I made for the Fitbit Sense and Fitbit Versa 3
-          smartwatches. I build it with CSS, SVG, and JavaScript using Fitbit Studio, an online development environment,
+          smartwatches. I built it with CSS, SVG, and JavaScript using Fitbit Studio, an online development environment,
           and the Fitbit OS Simulator. </p>
         <a href="https://gallery.fitbit.com/details/58e742e9-d043-4ee1-a8be-479c1e1c6db7"
           class="project__words-cont--first-link">Fitbit App Gallery</a>
