Fix footer links

--- a/index.html
+++ b/index.html
@@ -144,40 +144,37 @@
   <footer class="footer">
     <h3 class="footer__contact-title">connect</h3>
     <div class="sm-links">
-      <ul class="sm-links__link">
-        <li>
+      <ul>
+        <li class="sm-links__link">
           <a href='https://twitter.com/greyypse'>
             <img src='src/assets/twitter.svg' alt="twitter logo">
           </a>
         </li>
-      </ul>
-      <ul class="sm-links__link">
-        <li>
+
+        <li class="sm-links__link">
           <a href="https://github.com/emgrey02">
             <img src='src/assets/github.svg' width='40' alt="github logo">
           </a>
         </li>
-      </ul>
-      <ul class="sm-links__link">
-        <li>
+        <li class="sm-links__link">
           <a href="https://open.spotify.com/user/1223292638?si=3879996965d44679">
             <img src='src/assets/spotify.svg' alt='spotify logo'>
           </a>
         </li>
-      </ul>
-      <ul class="sm-links__link">
-        <li>
+
+
+        <li class="sm-links__link">
           <a href="https://linkedin.com/in/emma-grey-289321190/">
             <img src="src/assets/linkedin.svg" alt="linkedin logo">
           </a>
         </li>
-      </ul>
-      <ul class="sm-links__link">
-        <li>
+
+        <li class="sm-links__link">
           <a href="https://www.youtube.com/channel/UCyh26WCoIMLmXchQY1VZhcg">
             <img src="src/assets/youtube.svg" alt="youtube logo">
           </a>
         </li>
+
       </ul>
     </div>
     <p>© Emma Grey</p>
